--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/main/java/org/iii/web/login/LoginRepository.java=UTF-8
 encoding//src/main/webapp/WEB-INF/pages/hello.jsp=UTF-8
